tests/ui/malformed/issue-107423-unused-delim-only-one-no-pair.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-107423-unused-delim-only-one-no-pair.rs:7:11
   |
LL | fn a(){{{
   |       --- ^
   |       |||
   |       ||unclosed delimiter
   |       |unclosed delimiter
   |       unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-107423-unused-delim-only-one-no-pair.rs:7:11
   |
LL | fn a(){{{
   |       --- ^
   |       |||
   |       ||unclosed delimiter
   |       |unclosed delimiter
   |       unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-107423-unused-delim-only-one-no-pair.rs:7:11
   |
LL | fn a(){{{
   |       --- ^
   |       |||
   |       ||unclosed delimiter
   |       |unclosed delimiter
   |       unclosed delimiter

error: aborting due to 3 previous errors

