tests/ui/malformed/issue-107423-unused-delim-only-one-no-pair.rs
// check that we don't generate a span that points beyond EOF

// error-pattern: unclosed delimiter
// error-pattern: unclosed delimiter
// error-pattern: unclosed delimiter

fn a(){{{
